...
// MARK: - NavigationItem

extension TodoListPageViewController {

    /// setNavigationItemをセットする
    private func setNavigationItem() {
        self.title = "ToDoリスト"

        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(self.rightButtonAction))

        #if DEBUG
        navigationItem.leftBarButtonItem = UIBarButtonItem(barButtonSystemItem: .trash, target: self, action: #selector(leftButtonAction))
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = "allDelete"
        #endif
    }

    /// Todoの入力画面を開く
    @objc func rightButtonAction() {
        let inputViewController = TodoRegisterViewController()
...
