...

import UIKit

struct AlertManager {

    enum AlertType: CaseIterable {
        case delete, close
    }

    /// アラートを表示する
    /// - Parameters:
    ///   - vc: ViewController
    ///   - type: 出すアラートのタイプを設定する
...
